# ft8_lib

./: .gitignore  build_wasm.sh  ft8_wasm.js  ft8_wasm.wasm
ft8_wasm/: .gitignore  CMakeLists.txt
ft8_wasm/src/: decft8.c  decft8.h  genft8.c  genft8.h  main.c
ft8_wasm/web/: ft8_wasm.js  ft8_wasm.wasm  index.html
